@@ -1,5 +1,6 @@
 3.0.4 2013-09-??
 ========
+ * improve stability under massive concurrent
  * refix locking impl for threaded env
 
 3.0.3 2013-06-18
